--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     </head>
     <body>
         <p> 
-            Hello <%= text %> 
+            Hello <%= locals.text || 'Default' %> 
         </p>
     </body>
 </html>
